src/test/ui/derives/derives-span-PartialOrd-enum-struct-variant.stderr
error[E0277]: can't compare `Error` with `Error`
  --> $DIR/derives-span-PartialOrd-enum-struct-variant.rs:9:6
   |
LL |      x: Error
   |      ^^^^^^^^ no implementation for `Error < Error` and `Error > Error`
   |
   = help: the trait `PartialOrd` is not implemented for `Error`
   = note: required by `std::cmp::PartialOrd::partial_cmp`
   = note: this error originates in the derive macro `PartialOrd` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
